<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort List</string>
    <string name="action_add">Add Item</string>
    <string name="action_clear">Clear</string>
    <string name="list">My List</string>
    <string name="options">Options</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="night">Night Mode</string>
    <string name="labelProductName">Name</string>
    <string name="labelPrice">Price</string>
    <string name="labelQuantity">Quantity</string>
    <string name="labelStatus">Status</string>
    <string name="fontsize">Font Size</string>
    <string name="light">Lights OFF</string>
    <string name="dark">Lights ON</string>
    <string name="FIELDS_REQUIRED_ERROR">All fields must be filled.</string>
    <string name="NAME_TAKEN_ERROR">Product with this name already exists.</string>
    <string name="SAVED">Product has been successfully added.</string>
    <string name="DELETED">Deleted</string>
    <string name="fsize">Pick a font size</string>
    <string name="ALERT_DIALOG_TITLE">Removal</string>
    <string name="ALERT_DIALOG_TEXT">Delete?</string>
    <string name="ALERT_DIALOG_YES">Yes</string>
    <string name="ALERT_DIALOG_NO">No</string>

    <string-array
        name="fontSizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

</resources>
