<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s10552.shoppinglist.ProductListActivity">

    <Button
        android:id="@+id/add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/action_add" />

    <ListView
        android:id="@+id/product_list_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textView7"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"></ListView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_product"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/labelProductName"
        tools:text="@string/labelProductName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:text="@string/labelQuantity"
        tools:text="@string/labelQuantity" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:text="@string/labelPrice"
        tools:text="@string/labelPrice" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignEnd="@+id/product_list_view"
        android:layout_alignRight="@+id/product_list_view"
        android:text="@string/labelStatus"
        tools:text="@string/labelStatus" />


</RelativeLayout>
